# accordion-acetone

./: AUTHORS.txt  COPYING.txt  README.md  pyproject.toml  requirements.txt
framework/acetone/: main.py
init/: pickle_to_json.py
src/: tasks.py
src/acetone/: activation_functions.py  cli_codegen.py  cli_semantic_preservation.py  layers.py  neural_network.py
src/acetone/templates/: Makefile.mustache  __init__.py  activation_function_c.mustache  activation_function_h.mustache  averagepooling2d_hpp.mustache  convolution2d_gpu_mma_hpp.mustache  convolution2d_hpp.mustache  convolution2d_mma_gpu_hpp.mustache  convolution2d_mma_hpp.mustache  dense_hpp.mustache  global_vars_c.mustache  inference_c.mustache  inference_h.mustache  input_hpp.mustache  layers_c.mustache  layers_gpu_mma_hpp.mustache  layers_h.mustache  layers_hpp.mustache  layers_mma_gpu_hpp.mustache  layers_mma_hpp.mustache  main_c.mustache  maxpooling2d_hpp.mustache  softmax_hpp.mustache  test_dataset_c.mustache  test_dataset_h.mustache
